--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -5,16 +5,19 @@
   "badRequest": "Bad request. Try again",
   "browserNotSupported": "Your browser is not supported for playing this file.",
   "changeServer": "Change server",
-  "connect": "Connect",
   "collections": "Collections",
+  "connect": "Connect",
   "continueListening": "Continue listening",
   "continueWatching": "Continue watching",
+  "dislikes": "Dislikes",
   "endDate": "End date",
   "endsAt": "Ends at {time}",
   "episodeNumber": "Episode {episodeNumber}",
+  "failedToRefreshItems": "Failed to refresh items",
   "favorite": "Favorite",
   "features": "Features",
   "filter": "Filter",
+  "filtersNotFound": "Unable to load filters",
   "genres": "Genres",
   "home": "Home",
   "incorrectUsernameOrPassword": "Incorrect username or password",
@@ -22,6 +25,7 @@
   "libraryEmpty": "This library is empty",
   "libraryNotFound": "Library not found",
   "liked": "Liked",
+  "likes": "Likes",
   "login": "Login",
   "logout": "Logout",
   "more": "More",
@@ -31,7 +35,6 @@
   "networks": "Networks",
   "noNetworkConnection": "No network connection",
   "noResultsFound": "No results found",
-  "unliked": "Unliked",
   "parentalRatings": "Parental Ratings",
   "password": "Password",
   "play": "Play",
@@ -40,30 +43,16 @@
   "rating": "Rating",
   "releaseDate": "Release date",
   "resumable": "Resumable",
+  "selectServer": "Select server",
+  "series": "Series",
   "serverAddress": "Server address",
   "serverAddressMustBeUrl": "Server address must be a valid URL",
   "serverAddressRequired": "Server address is required",
   "serverNotFound": "Server not found",
   "serverVersionTooLow": "Server version needs to be 10.7.0 or higher",
-  "series": "Series",
   "settings": "Settings",
   "shows": "Shows",
   "signIn": "Sign in",
-  "unexpectedError": "Unexpected error",
-  "unhandledException": "Unhandled exception",
-  "upNext": "Up next",
-  "username": "Username",
-  "usernameRequired": "Username is required",
-  "filtersNotFound": "Unable to load filters",
-  "status": "Status",
-  "played": "Played",
-  "unplayed": "Unplayed",
-  "resumable": "Resumable",
-  "favorite": "Favorite",
-  "likes": "Likes",
-  "dislikes": "Dislikes",
-  "features": "Features",
-  "selectServer": "Select server",
   "sortByType": "By {type}",
   "specialFeatures": "Special Features",
   "status": "Status",
@@ -74,9 +63,11 @@
   "trailer": "Trailer",
   "unexpectedError": "Unexpected error",
   "unhandledException": "Unhandled exception",
+  "unliked": "Unliked",
   "unplayed": "Unplayed",
   "upNext": "Up next",
   "username": "Username",
+  "usernameRequired": "Username is required",
   "videoTypes": "Video Types",
   "years": "Years"
 }
